// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`basic 1`] = `
{
  "importStrings": [
    "import locale__test_srcDir_en_json from "../en.json";",
    "import locale__test_srcDir_ja_json from "../ja.json";",
    "import locale__test_srcDir_fr_json from "../fr.json";",
  ],
  "localeLoaders": [
    [
      "en",
      [
        {
          "cache": "true",
          "key": ""../en.json"",
          "load": "() => Promise.resolve(locale__test_srcDir_en_json)",
        },
      ],
    ],
    [
      "ja",
      [
        {
          "cache": "true",
          "key": ""../ja.json"",
          "load": "() => Promise.resolve(locale__test_srcDir_ja_json)",
        },
      ],
    ],
    [
      "fr",
      [
        {
          "cache": "true",
          "key": ""../fr.json"",
          "load": "() => Promise.resolve(locale__test_srcDir_fr_json)",
        },
      ],
    ],
  ],
  "vueI18nConfigs": [
    "() => import("../i18n.config.ts?hash=bffaebcb&config=1" /* webpackChunkName: "i18n_config_ts_bffaebcb" */)",
  ],
}
`;

exports[`files with cache configuration 1`] = `
{
  "importStrings": [],
  "localeLoaders": [
    [
      "en",
      [
        {
          "cache": "true",
          "key": ""../en.json"",
          "load": "() => import("../en.json" /* webpackChunkName: "locale__test_srcDir_en_json" */)",
        },
      ],
    ],
    [
      "ja",
      [
        {
          "cache": "true",
          "key": ""../ja.json"",
          "load": "() => import("../ja.json" /* webpackChunkName: "locale__test_srcDir_ja_json" */)",
        },
      ],
    ],
    [
      "fr",
      [
        {
          "cache": "true",
          "key": ""../fr.json"",
          "load": "() => import("../fr.json" /* webpackChunkName: "locale__test_srcDir_fr_json" */)",
        },
      ],
    ],
    [
      "es",
      [
        {
          "cache": "false",
          "key": ""../es.json"",
          "load": "() => import("../es.json" /* webpackChunkName: "locale__test_srcDir_es_json" */)",
        },
      ],
    ],
    [
      "es-AR",
      [
        {
          "cache": "false",
          "key": ""../es.json"",
          "load": "() => import("../es.json" /* webpackChunkName: "locale__test_srcDir_es_json" */)",
        },
        {
          "cache": "true",
          "key": ""../es-AR.json"",
          "load": "() => import("../es-AR.json" /* webpackChunkName: "locale__test_srcDir_es_AR_json" */)",
        },
      ],
    ],
  ],
  "vueI18nConfigs": [
    "() => import("../i18n.config.ts?hash=bffaebcb&config=1" /* webpackChunkName: "i18n_config_ts_bffaebcb" */)",
  ],
}
`;

exports[`lazy 1`] = `
{
  "importStrings": [],
  "localeLoaders": [
    [
      "en",
      [
        {
          "cache": "true",
          "key": ""../en.json"",
          "load": "() => import("../en.json" /* webpackChunkName: "locale__test_srcDir_en_json" */)",
        },
      ],
    ],
    [
      "ja",
      [
        {
          "cache": "true",
          "key": ""../ja.json"",
          "load": "() => import("../ja.json" /* webpackChunkName: "locale__test_srcDir_ja_json" */)",
        },
      ],
    ],
    [
      "fr",
      [
        {
          "cache": "true",
          "key": ""../fr.json"",
          "load": "() => import("../fr.json" /* webpackChunkName: "locale__test_srcDir_fr_json" */)",
        },
      ],
    ],
  ],
  "vueI18nConfigs": [
    "() => import("../i18n.config.ts?hash=bffaebcb&config=1" /* webpackChunkName: "i18n_config_ts_bffaebcb" */)",
  ],
}
`;

exports[`locale file in nested 1`] = `
{
  "importStrings": [],
  "localeLoaders": [
    [
      "en",
      [
        {
          "cache": "true",
          "key": ""../en/main.json"",
          "load": "() => import("../en/main.json" /* webpackChunkName: "locale__test_srcDir_en_main_json" */)",
        },
      ],
    ],
    [
      "ja",
      [
        {
          "cache": "true",
          "key": ""../ja/main.json"",
          "load": "() => import("../ja/main.json" /* webpackChunkName: "locale__test_srcDir_ja_main_json" */)",
        },
      ],
    ],
    [
      "fr",
      [
        {
          "cache": "true",
          "key": ""../fr/main.json"",
          "load": "() => import("../fr/main.json" /* webpackChunkName: "locale__test_srcDir_fr_main_json" */)",
        },
      ],
    ],
  ],
  "vueI18nConfigs": [
    "() => import("../i18n.config.ts?hash=bffaebcb&config=1" /* webpackChunkName: "i18n_config_ts_bffaebcb" */)",
  ],
}
`;

exports[`multiple files 1`] = `
{
  "importStrings": [],
  "localeLoaders": [
    [
      "en",
      [
        {
          "cache": "true",
          "key": ""../en.json"",
          "load": "() => import("../en.json" /* webpackChunkName: "locale__test_srcDir_en_json" */)",
        },
      ],
    ],
    [
      "ja",
      [
        {
          "cache": "true",
          "key": ""../ja.json"",
          "load": "() => import("../ja.json" /* webpackChunkName: "locale__test_srcDir_ja_json" */)",
        },
      ],
    ],
    [
      "fr",
      [
        {
          "cache": "true",
          "key": ""../fr.json"",
          "load": "() => import("../fr.json" /* webpackChunkName: "locale__test_srcDir_fr_json" */)",
        },
      ],
    ],
    [
      "es",
      [
        {
          "cache": "true",
          "key": ""../es.json"",
          "load": "() => import("../es.json" /* webpackChunkName: "locale__test_srcDir_es_json" */)",
        },
      ],
    ],
    [
      "es-AR",
      [
        {
          "cache": "true",
          "key": ""../es.json"",
          "load": "() => import("../es.json" /* webpackChunkName: "locale__test_srcDir_es_json" */)",
        },
        {
          "cache": "true",
          "key": ""../es-AR.json"",
          "load": "() => import("../es-AR.json" /* webpackChunkName: "locale__test_srcDir_es_AR_json" */)",
        },
      ],
    ],
  ],
  "vueI18nConfigs": [
    "() => import("../i18n.config.ts?hash=bffaebcb&config=1" /* webpackChunkName: "i18n_config_ts_bffaebcb" */)",
  ],
}
`;

exports[`toCode: function (arrow) 1`] = `
{
  "importStrings": [],
  "localeLoaders": [],
  "vueI18nConfigs": [
    "() => import("../i18n.config.ts?hash=bffaebcb&config=1" /* webpackChunkName: "i18n_config_ts_bffaebcb" */)",
  ],
}
`;

exports[`toCode: function (named) 1`] = `
{
  "importStrings": [],
  "localeLoaders": [],
  "vueI18nConfigs": [
    "() => import("../i18n.config.ts?hash=bffaebcb&config=1" /* webpackChunkName: "i18n_config_ts_bffaebcb" */)",
  ],
}
`;

exports[`vueI18n option 1`] = `
{
  "importStrings": [
    "import locale__test_srcDir_en_json from "../en.json";",
    "import locale__test_srcDir_ja_json from "../ja.json";",
    "import locale__test_srcDir_fr_json from "../fr.json";",
  ],
  "localeLoaders": [
    [
      "en",
      [
        {
          "cache": "true",
          "key": ""../en.json"",
          "load": "() => Promise.resolve(locale__test_srcDir_en_json)",
        },
      ],
    ],
    [
      "ja",
      [
        {
          "cache": "true",
          "key": ""../ja.json"",
          "load": "() => Promise.resolve(locale__test_srcDir_ja_json)",
        },
      ],
    ],
    [
      "fr",
      [
        {
          "cache": "true",
          "key": ""../fr.json"",
          "load": "() => Promise.resolve(locale__test_srcDir_fr_json)",
        },
      ],
    ],
  ],
  "vueI18nConfigs": [
    "() => import("../foo/layer2/vue-i18n.options.js?hash=475488e5&config=1" /* webpackChunkName: "vue_i18n_options_js_475488e5" */)",
    "() => import("../layer1/i18n.custom.ts?hash=0ca697e2&config=1" /* webpackChunkName: "i18n_custom_ts_0ca697e2" */)",
    "() => import("../to/i18n.config.ts?hash=fb1304e8&config=1" /* webpackChunkName: "i18n_config_ts_fb1304e8" */)",
  ],
}
`;
